Fix provider cache build compatibility